--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
 	<title>{% if page.category != 'home' %}{{ page.title }} &ndash; {% endif %}{{ site.name }}</title>
 	<link rel="icon" type="image/ico" href="{{ path }}img/favicon.ico"/>
 	<link rel="stylesheet" href="{{ path }}css/style.css" />
+	<link rel="stylesheet" href="{{ path }}css/pygments.css" />
 	<link rel="stylesheet" href="{{ path }}css/jquery-ui.css" />
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
@@ -24,7 +25,7 @@
 		</ul>
 	</div>
 
-	<div id="content">
+	<div id="content" class="{{ page.class }}">
 		{{ content }}
 	</div>
 </body>
