add footer info

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,5 +28,7 @@
 	<div id="content" class="{{ page.class }}">
 		{{ content }}
 	</div>
+
+	<div id="by">jQuery Masonry Ordered by Vit 'tasuki' Brunner</div>
 </body>
 </html>
