make pygments comments visible

--- a/css/pygments.css
+++ b/css/pygments.css
@@ -1,15 +1,15 @@
 .hll { background-color: #49483e }
-.c { color: #75715e } /* Comment */
+.c { color: #aaaa77 } /* Comment */
 .err { color: #960050; background-color: #1e0010 } /* Error */
 .k { color: #66d9ef } /* Keyword */
 .l { color: #ae81ff } /* Literal */
 .n { color: #f8f8f2 } /* Name */
 .o { color: #f92672 } /* Operator */
 .p { color: #f8f8f2 } /* Punctuation */
-.cm { color: #75715e } /* Comment.Multiline */
-.cp { color: #75715e } /* Comment.Preproc */
-.c1 { color: #75715e } /* Comment.Single */
-.cs { color: #75715e } /* Comment.Special */
+.cm { color: #aaaa77 } /* Comment.Multiline */
+.cp { color: #aaaa77 } /* Comment.Preproc */
+.c1 { color: #aaaa77 } /* Comment.Single */
+.cs { color: #aaaa77 } /* Comment.Special */
 .ge { font-style: italic } /* Generic.Emph */
 .gs { font-weight: bold } /* Generic.Strong */
 .kc { color: #66d9ef } /* Keyword.Constant */
