--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 	<div id="navigation">
-		<h1><a href="{{ path }}index.html">Masonry Ordered</a></h1>
+		<h1><a href="{{ path }}">Masonry Ordered</a></h1>
 		<ul>
 		{% for p in site.posts reversed %}
 			<li><a href="{{ p.url }}">{{ p.title }}</a></li>
