--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ p { margin: 5px 0px; }
 .item a:hover { text-decoration: none; }
 .col2 { width: 440px; }
 .small-text { font-size: 16px; }
+.index { float: left; font-size: 40px; letter-spacing: -5px; padding-right: 12px; }
 
 .link { padding: 0px; }
 .link a { background: #D17; border: 5px solid #D17; text-decoration: none; display: block; padding: 5px; border-radius: 5px; width: 200px; }
