--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
 	<script type="text/javascript" src="{{ path }}js/jquery.imagesloaded.js"></script>
 	<script type="text/javascript" src="{{ path }}js/jquery.masonry.js"></script>
 	<script type="text/javascript" src="{{ path }}jquery.masonry.ordered.js"></script>
+	{% include google_analytics.html %}
 </head>
 <body>
 	<div id="navigation">
