--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,6 @@
 		{{ content }}
 	</div>
 
-	<div id="by">jQuery Masonry Ordered by Vit &lsquo;tasuki&rsquo; Brunner</div>
+	<div id="by">jQuery Masonry Ordered by <a href="http://tasuki.org">Vit &lsquo;tasuki&rsquo; Brunner</a></div>
 </body>
 </html>
