Make work with https

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,10 +9,10 @@
 	<link rel="stylesheet" href="{{ path }}css/style.css" />
 	<link rel="stylesheet" href="{{ path }}css/pygments.css" />
 	<link rel="stylesheet" href="{{ path }}css/jquery-ui.css" />
-	<link href='http://fonts.googleapis.com/css?family=Ubuntu:400,700' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono' rel='stylesheet' type='text/css'>
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
+	<link href="//fonts.googleapis.com/css?family=Ubuntu:400,700" rel="stylesheet" type="text/css">
+	<link href="//fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet" type="text/css">
+	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="{{ path }}js/jquery.imagesloaded.js"></script>
 	<script type="text/javascript" src="{{ path }}js/jquery.masonry.js"></script>
 	<script type="text/javascript" src="{{ path }}jquery.masonry.ordered.js"></script>
